--- a/style.css
+++ b/style.css
@@ -91,3 +91,6 @@ font-size: 40px;}
         footer p{ 
          text-align: center;
         }
+        .exp{
+            margin-left:54px;
+        }
